[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/BulletSprite.png" type="Texture" id=2]
[ext_resource path="res://Assets/ShootSound.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_process"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[node name="PlayerBullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -2, -2, 4, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animate"
anims/Animate = SubResource( 1 )

[node name="Collision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 2 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="area_entered" from="Collision" to="." method="_on_Collision_area_entered"]
[connection signal="body_entered" from="Collision" to="." method="_on_Collision_body_entered"]
